objects/pse__Create_Project_Personal__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings related to creating a project from an opportunity or template. Predominately, these settings affect the Create Project and Create Project from Template UI screens that combine information from multiple objects.</description>
    <fields>
        <fullName>pse__Opp_Product_Milestone_Fieldset__c</fullName>
        <description>The API name of a field set used by the Milestone object. Fields in this set define the columns in the Milestone from Opportunity Products section on the Create Project page. By default, there is no custom field set.</description>
        <inlineHelpText>The API name of a field set used by the Milestone object. Fields in this set define the columns in the Milestone from Opportunity Products section on the Create Project page.</inlineHelpText>
        <label>Opportunity Product Milestone Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Opp_Proj_Milestone_Fieldset__c</fullName>
        <description>The API name of a field set used by the Milestone object. Fields in this set define the columns in the Milestone from Opportunity Products on the Create Project from Template page. By default, there is no custom field set.</description>
        <inlineHelpText>The API name of a field set used by the Milestone object. Fields in this set define the columns in the Milestone from Opportunity Products on the Create Project from Template page.</inlineHelpText>
        <label>Opportunity Proj Milestone Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Opp_RR_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjectOpportunityRRColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Resource Request object. Fields in this set define the columns in Resource Request Mappings from Opportunity on the Create Project from Template page. The default value is CreateProjectOpportunityRRColumns.</description>
        <inlineHelpText>API name of a field set used by the Resource Request object. Fields in this set define the columns in Resource Request Mappings from Opportunity on the Create Project from Template page.</inlineHelpText>
        <label>Opp RR Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Opp_and_Template_Proj_Budget_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjectFromOppAndTempBudgetColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Budget object. Fields in this set define the editable fields in the Budget Details section of the Create Project from Template and Create Project from Opportunity pages. The default value is CreateProjectFromOppAndTempBudgetColumns.</description>
        <inlineHelpText>API name of a field set used by the Budget object. Fields in this set define the editable fields in the Budget Details section of the Create Project from Template and Create Project from Opportunity pages.</inlineHelpText>
        <label>Opp and Template Proj Budget Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Opp_and_Template_Proj_Fieldset__c</fullName>
        <defaultValue>&apos;createProjectFromOppAndTempProjColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Project object. Fields in this set define the editable fields in the Project Details section of the Create Project from Template and Create Project from Opportunity pages. The default value is createProjectFromOppAndTempProjColumns.</description>
        <inlineHelpText>API name of a field set used by the Project object. Fields in this set define the editable fields in the Project Details section of the Create Project from Template and Create Project from Opportunity pages.</inlineHelpText>
        <label>Opp and Template Proj Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Skill_Request_Fieldset__c</fullName>
        <description>The API name of the Resource Skill Request object field set that defines the fields that are copied when adding resource requests from a template.</description>
        <inlineHelpText>The API name of the Resource Skill Request object field set that defines the fields that are copied when adding resource requests from a template.</inlineHelpText>
        <label>Resource Skill Request Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_Assign_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTempAltCopyAssignmentField&apos;</defaultValue>
        <description>The API name of a field set used by the Assignment object. Fields in this set define the assignment fields (if associated assignments exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyAssignmentField.</description>
        <inlineHelpText>API name of a field set used by the Assignment object. Fields in this set define the assignment fields (if associated assignments exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy Assign Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_Location_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTempAltCopyProjLocFields&apos;</defaultValue>
        <description>The API name of a field set used by the Project Location object. Fields in this set define the project location fields (if associated locations exist) to copy from template to new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyProjLocFields.</description>
        <inlineHelpText>API name of a field set used by the Project Location object. Fields in this set define the project location fields (if associated locations exist) to copy from template to new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy Location Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_MS_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTempAltCopyMilestoneFields&apos;</defaultValue>
        <description>The API name of a field set used by the Milestone object. Fields in this set define the milestone fields (if associated milestones exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyMilestoneFields.</description>
        <inlineHelpText>API name of a field set used by the Milestone object. Fields in this set define the milestone fields (if associated milestones exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy MS Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_Meth_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTempAltCopyProjMethFields&apos;</defaultValue>
        <description>The API name of a field set used by the Methodology object. Fields in this set define the methodology fields (if associated methodologies exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyProjMethFields.</description>
        <inlineHelpText>API name of a field set used by the Methodology object. Fields in this set define the methodology fields (if associated methodologies exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy Meth Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_Phase_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTempAltCopyProjPhaseFields&apos;</defaultValue>
        <description>The API name of a field set used by the Project Phase object. Fields in this set define the project phase fields (if associated project phases exist) to copy from template to new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyProjPhaseFields.</description>
        <inlineHelpText>API name of a field set used by the Project Phase object. Fields in this set define the project phase fields (if associated project phases exist) to copy from template to new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy Phase Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_Project_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTempAltCopyProjectFields&apos;</defaultValue>
        <description>The API name of a field set used by the Project object. Fields in this field set define additional project fields to copy from the template to the new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyProjectFields.</description>
        <inlineHelpText>API name of a field set used by the Project object. Fields in this field set define additional project fields to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy Project Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_RR_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTempAltCopyProjRRFields&apos;</defaultValue>
        <description>The API name of a field set used by the Resource Request object. Fields in this set define the resource request fields (if associated requests exist) to copy from template to new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyProjRRFields.</description>
        <inlineHelpText>API name of a field set used by the Resource Request object. Fields in this set define the resource request fields (if associated requests exist) to copy from template to new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy RR Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_Risk_Fieldset__c</fullName>
        <description>The API name of a field set used by the Risk object. Fields in this set define the Risk fields (if associated risks exist) to copy from the template to a new project. These fields are not shown on the Create Project from Template page. By default, there is no custom field set defined.</description>
        <inlineHelpText>The API name of a field set used by the Risk object. Fields in this set define the Risk fields (if associated risks exist) to copy from a template to a new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy Risk Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Alt_Copy_Task_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTempAltCopyProjTaskFields&apos;</defaultValue>
        <description>The API name of a field set used by the Project Task object. Fields in this set define the project task fields (if associated tasks exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjFromTempAltCopyProjTaskFields.</description>
        <inlineHelpText>API name of a field set used by the Project Task object. Fields in this set define the project task fields (if associated tasks exist) to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Alt Copy Task Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Assignment_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTemplateAssignmentColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Assignment object. Fields in this field set define the editable fields in the Assignments section of the Create Project from Template page. The default value is CreateProjFromTemplateAssignmentColumns.</description>
        <inlineHelpText>API name of a field set used by the Assignment object. Fields in this field set define the editable fields in the Assignments section of the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Assignment Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Columns_MS_Fieldset__c</fullName>
        <description>The API name of a Milestone object field set that defines the read-only fields shown in the Add Milestones from Template window.</description>
        <inlineHelpText>Enter the API name of a Milestone object field set that defines the read-only fields shown in the Add Milestones from Template window.</inlineHelpText>
        <label>Template Proj Columns MS Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Columns_RR_Fieldset__c</fullName>
        <description>The API name of a Resource Request object field set that defines the read-only fields shown in the Add Resource Requests from Template window.</description>
        <inlineHelpText>Enter the API name of a Resource Request object field set that defines the read-only fields shown in the Add Resource Requests from Template window.</inlineHelpText>
        <label>Template Proj Columns RR Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Copy_PTA_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjectFromTemplateCopyPTAFields&apos;</defaultValue>
        <description>The API name of a field set used by the Project Task Assignment object. Fields in this set define additional project task assignment fields to copy from the template to the new project. These fields are not shown on the Create Project from Template page. The default value is CreateProjectFromTemplateCopyPTAFields.</description>
        <inlineHelpText>API name of a field set used by the Project Task Assignment object. Fields in this set define additional project task assignment fields to copy from the template to the new project. These fields are not shown on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Copy PTA Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Location_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTemplateLocationColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Project Location object. Fields in this field set define the editable fields in the Project Locations section of the Create Project from Template page. The default value is CreateProjFromTemplateLocationColumns.</description>
        <inlineHelpText>API name of a field set used by the Project Location object. Fields in this field set define the editable fields in the Project Locations section of the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Location Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_MS_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTemplateMilestoneColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Milestone object. Fields in this field set define the editable fields in the Milestones section of the Create Project from Template page. The default value is CreateProjFromTemplateMilestoneColumns.</description>
        <inlineHelpText>API name of a field set used by the Milestone object. Fields in this field set define the editable fields in the Milestones section of the Create Project from Template page.</inlineHelpText>
        <label>Template Proj MS Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Meth_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTemplateMethodologyColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Methodology object. Fields in this field set define the editable fields in the Methodologies section of the Create Project from Template page. The default value is CreateProjFromTemplateMethodologyColumns.</description>
        <inlineHelpText>API name of a field set used by the Methodology object. Fields in this field set define the editable fields in the Methodologies section of the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Meth Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Phase_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTemplatePhaseColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Project Phase object. Fields in this field set define editable fields in the Project Phases section of the Create Project from Template page. The default value is CreateProjFromTemplatePhaseColumns.</description>
        <inlineHelpText>API name of a field set used by the Project Phase object. Fields in this field set define editable fields in the Project Phases section of the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Phase Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_RR_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjectFromTemplateRRColumns&apos;</defaultValue>
        <description>The API name of the Resource Request object field set that defines the editable columns in the Create Project from Template page or Add Resource Requests from Template window.</description>
        <inlineHelpText>API name of a field set used by the Resource Request object. Fields in this set define the columns in the Resource Request Mappings from Template on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj RR Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Risk_Fieldset__c</fullName>
        <description>The API name of a field set used by the Risk object. Fields in this set define the columns in the Risk Mappings from Template on the Create Project from Template page. By default, there is no custom field set.</description>
        <inlineHelpText>The API name of a field set used by the Risk object. Fields in this set define the columns in the Risk Mappings from Template on the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Risk Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Template_Proj_Task_Fieldset__c</fullName>
        <defaultValue>&apos;CreateProjFromTemplateTasksColumns&apos;</defaultValue>
        <description>The API name of a field set used by the Project Task object. Fields in this field set define the editable fields in the Project Tasks section of the Create Project from Template page. The default value is CreateProjFromTemplateTasksColumns.</description>
        <inlineHelpText>API name of a field set used by the Project Task object. Fields in this field set define the editable fields in the Project Tasks section of the Create Project from Template page.</inlineHelpText>
        <label>Template Proj Task Fieldset</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Create Project Personal</label>
</CustomObject>